Fix SIT, ECO Healthcheck und Branch

--- a/src/ecostake-docker/Dockerfile
+++ b/src/ecostake-docker/Dockerfile
@@ -1,7 +1,7 @@
 # ECOSTAKE BUILD STEP
 FROM python:3.9 AS ecostake_build
 
-ARG BRANCH=latest
+ARG BRANCH=main
 ARG COMMIT=""
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
