--- a/src/silicoin-docker/Dockerfile
+++ b/src/silicoin-docker/Dockerfile
@@ -1,7 +1,7 @@
 # SILICOIN BUILD STEP
 FROM python:3.9 AS silicoin_build
 
-ARG BRANCH=latest
+ARG BRANCH=main
 ARG COMMIT=""
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
